--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "styled-components": "^5.3.9",
+    "typescript": "5.0.2",
+    "zustand": "^4.3.6"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.6"
   }
 }
