--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./*"]
+      "@page/*": ["./pages/*"],
+      "@component/*": ["./src/components/*"],
+      "@hook/*": ["./src/hooks/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
